# mq-monitoring

./: CHANGELOG.md  README.md  config.json  mq-monitoring.cabal
app/: Component.hs  Handler.hs
docker/: Dockerfile-mq-monitoring  Dockerfile-mq-monitoring-handler
src/System/MQ/: Monitoring.hs
src/System/MQ/Monitoring/Internal/: Types.hs
